--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -5,6 +5,25 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h2>Hello Template</h2>
+	<h2>Hello Template</h2>
+	
+	<table>
+		<thead>
+			<tr>
+				<th>제목 </th>
+				<th>내용 </th>
+			</tr>
+		</thead>
+		
+		<tbody>
+			<tr th:each="question : ${questionList}">
+				<td th:text="${question.subject}"></td>
+				<td th:text="${question.createDate}"></td>
+				
+			</tr>
+		</tbody>
+		
+	</table>
+
 </body>
 </html>
