--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -11,7 +11,7 @@
 		<thead>
 			<tr>
 				<th>제목 </th>
-				<th>내용 </th>
+				<th>등록일 </th>
 			</tr>
 		</thead>
 		
@@ -22,14 +22,12 @@
 				   th:text="${question.subject}">
 				</a>
 				</td>
-				 
-				
-            	
 				<td th:text="${question.createDate}"></td>	
 			</tr>
-		</tbody>
-		
+		</tbody>	
 	</table>
+	
+	<a th:href="@{/question/create}" class="btn">질문 등록하기</a>
 
 </body>
 </html>
