--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
+
 <h1 th:text="${question.subject}"></h1>
 <div th:text="${question.content}"></div>
 <h3 th:text="|${#lists.size(question.answerList)} 개의 답변이 있습니다.|"></h3>
@@ -21,5 +18,6 @@
 <input type="submit" value="답변등록">
 </form>
 
-</body>
+
+</div>
 </html>
