--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-	<h2>Hello Template</h2>
-	
+<html layout:decorate="~{layout}">
+<div layout:fragment="content" class="container">
 	<table>
 		<thead>
 			<tr>
@@ -28,6 +22,6 @@
 	</table>
 	
 	<a th:href="@{/question/create}" class="btn">질문 등록하기</a>
+</div>
 
-</body>
 </html>
