--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -4,11 +4,8 @@
 
 	<form th:action="@{/question/create}" th:object="${questionForm}" method="post">
 		
-		<!-- 검증에 실패했을 경우  -->
-		<div class="" role="alert" 
-		  th:if="${#fields.hasAnyErrors()}">
-		 <div th:each="err: ${#fields.allErrors()}" th:text="${err}"></div>
-		</div>
+		
+		<div th:replace="~{form_errors :: formErrorsFragment}"></div>
 		
 		<div>
 			<label for="subject" class="">제목</label> 
