--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -10,7 +10,7 @@
 		</thead>
 		
 		<tbody>
-			<tr th:each="question, index : ${questionList}">
+			<tr th:each="question, loop : ${paging}">
 				<td>       
 				<a th:href="@{|/question/detail/${question.id}|}" 
 				   th:text="${question.subject}">
