--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -21,6 +21,30 @@
 		</tbody>	
 	</table>
 	
+	<!-- 페이징 처리  -->
+	<div th:if="${!paging.isEmpty()}">
+		<ul>
+		<!-- 이전페이지가 없을땐 버튼 비활성화   -->
+			<li class="" th:classappend="${!paging.hasPrevious} ? 'disabled' ">
+			 <a class="page-link" th:href="@{|?page=${paging.number-1}|}"> <span>이전</span></a>
+			</li>
+			
+		<!-- 페이지 리스트를 루프 돌면서 해당 페이지로 이동할 수 있는 링크생성,  
+		현재 페이지가 같을 땐 active클래스를 적용 
+		th:classappend="조건식 ? 클래스값" 속성은 조건식이 참인 경우 클래스값을 class 속성에 추가
+		-->
+		
+		<li th:each="page : ${#numbers.sequence(0, paging.totalPages-1)}" th:classappend="${page == paging.number} ? 'active'" class="page-item">
+		 <a th:text="${page}" class="page-link"  th:href="@{|?page=${page}|}"></a>
+		</li>
+			
+			<li class="" th:classappend="${!paging.hasNext} ? 'disabled' ">
+			<a th:href="@{|?page=${paging.number+1}|}"><span>다음</span></a>
+			</li>
+			
+		</ul>
+	</div>
+	
 	<a th:href="@{/question/create}" class="btn">질문 등록하기</a>
 </div>
 
