--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -4,13 +4,16 @@
 	<table>
 		<thead>
 			<tr>
+			   <th>번호</th>
 				<th>제목 </th>
 				<th>등록일 </th>
 			</tr>
 		</thead>
 		
 		<tbody>
+		
 			<tr th:each="question, loop : ${paging}">
+			<td th:text="${question.id}"></td>
 				<td>       
 				<a th:href="@{|/question/detail/${question.id}|}" 
 				   th:text="${question.subject}">
@@ -34,7 +37,10 @@
 		th:classappend="조건식 ? 클래스값" 속성은 조건식이 참인 경우 클래스값을 class 속성에 추가
 		-->
 		
-		<li th:each="page : ${#numbers.sequence(0, paging.totalPages-1)}" th:classappend="${page == paging.number} ? 'active'" class="page-item">
+		<li th:each="page : ${#numbers.sequence(0, paging.totalPages-1)}" 
+			th:if="${page >= paging.number-5 and page <= paging.number+5}"
+		    th:classappend="${page == paging.number} ? 'active'" class="page-item">
+		 
 		 <a th:text="${page}" class="page-link"  th:href="@{|?page=${page}|}"></a>
 		</li>
 			
