--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -4,7 +4,7 @@
 	<table>
 		<thead>
 			<tr>
-			   <th>번호</th>
+			    <th>번호</th>
 				<th>제목 </th>
 				<th>등록일 </th>
 			</tr>
@@ -13,12 +13,22 @@
 		<tbody>
 		
 			<tr th:each="question, loop : ${paging}">
-			<td th:text="${question.id}"></td>
+			<!-- <td th:text="${question.id}"></td>  -->
+			 <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
+			 
 				<td>       
 				<a th:href="@{|/question/detail/${question.id}|}" 
 				   th:text="${question.subject}">
 				</a>
+				<!--답변개수 표시  -->
+				<span class="" 
+				th:if="${#lists.size(question.answerList) > 0}" 
+				th:text="|${#lists.size(question.answerList)}개|" >
+				
+				</span>
+				
 				</td>
+				
 				<td th:text="${question.createDate}"></td>	
 			</tr>
 		</tbody>	
