--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -6,7 +6,9 @@
 			<tr>
 			    <th>번호</th>
 				<th>제목 </th>
+				<th>작성자</th>
 				<th>등록일 </th>
+				
 			</tr>
 		</thead>
 		
@@ -24,10 +26,10 @@
 				<span class="" 
 				th:if="${#lists.size(question.answerList) > 0}" 
 				th:text="|${#lists.size(question.answerList)}개|" >
-				
 				</span>
-				
 				</td>
+				
+				<td><span th:if="${question.author != null}" th:text="${question.author.username}"></span></td>
 				
 				<td th:text="${question.createDate}"></td>	
 			</tr>
