--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -30,6 +30,17 @@
 			<div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
 			<div th:if="${question.author != null}" th:text="${question.author.username}"></div>
 			<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+			<!-- 수정 버튼, 로그인사용자와 글쓴이 확인  
+			#authentication.getPrincipal()은 Principal 객체를 리턴하는 타임리프의 유틸리티이다.
+			-->
+			<div>
+			<a th:href="@{|/question/modify/${question.id}|}" class=""
+			sec:authorize="isAuthenticated()"
+			th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}" 
+			th:text="수정">
+			</a>
+			</div>
+			
 			
 		</div>
 	</div>
