--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -4,6 +4,7 @@
 
 	<!-- 질문내용 보이기  -->
 	<h2 th:text="${question.subject}"></h2>
+	
 	<div class="card my-3">
 		<div class="card-body">
 			<div class="card-text" style="white-space: pre-line;"
@@ -12,6 +13,8 @@
 		</div>
 	</div>
 
+
+<!-- 질문 작성자  -->
 	<div>
 		<span th:if="${question.author != null}"
 			th:text="${question.author.username}"></span>
@@ -28,7 +31,8 @@
 		<div th:each="answer : ${question.answerList}">
 
 			<div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
-			<div th:if="${question.author != null}" th:text="${question.author.username}"></div>
+			<div th:if="${question.author != null}" th:text="${answer.author.username}"></div>
+				
 			<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
 			<!-- 수정 버튼, 로그인사용자와 글쓴이 확인  
 			#authentication.getPrincipal()은 Principal 객체를 리턴하는 타임리프의 유틸리티이다.
@@ -59,8 +63,7 @@ sec:authorize="isAnonymous()" - 현재 로그아웃 상태
 sec:authorize="isAuthenticated()" - 현재 로그인 상태
  -->
 		<textarea sec:authorize="isAnonymous()" disabled th:field="*{content}"
-			rows="15">
-</textarea>
+			rows="15"></textarea>
 		<textarea sec:authorize="isAuthenticated()" th:field="*{content}"
 			class="form-control" rows="10"></textarea>
 
