--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -18,5 +18,6 @@
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
 
 <script th:src="@{/파일명입력.js}"></script>
+<th:block layout:fragment="script"></th:block>
 </body>
 </html>
