--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -4,7 +4,7 @@
 
 	<!-- 질문내용 보이기  -->
 	<h2 th:text="${question.subject}"></h2>
-	
+
 	<div class="card my-3">
 		<div class="card-body">
 			<div class="card-text" style="white-space: pre-line;"
@@ -14,11 +14,28 @@
 	</div>
 
 
-<!-- 질문 작성자  -->
+	<!-- 질문 작성자  -->
 	<div>
 		<span th:if="${question.author != null}"
 			th:text="${question.author.username}"></span>
 	</div>
+	<div
+		th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+	<!-- 수정 버튼, 로그인사용자와 글쓴이 확인  
+			#authentication.getPrincipal()은 Principal 객체를 리턴하는 타임리프의 유틸리티이다.
+			-->
+	<div>
+		<a th:href="@{|/question/modify/${question.id}|}" class=""
+			sec:authorize="isAuthenticated()"
+			th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
+			th:text="수정"> </a> <a href="javascript:void(0);"
+			th:data-uri="@{|/question/delete/${question.id}|}" class="delete"
+			sec:authorize="isAuthenticated()"
+			th:if="${question.author != null and #authentication.getPrincipal().getUsername()== question.author.username}"
+			th:text="삭제"></a>
+
+	</div>
+
 
 
 
@@ -30,22 +47,15 @@
 
 		<div th:each="answer : ${question.answerList}">
 
-			<div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
-			<div th:if="${question.author != null}" th:text="${answer.author.username}"></div>
-				
-			<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
-			<!-- 수정 버튼, 로그인사용자와 글쓴이 확인  
-			#authentication.getPrincipal()은 Principal 객체를 리턴하는 타임리프의 유틸리티이다.
-			-->
-			<div>
-			<a th:href="@{|/question/modify/${question.id}|}" class=""
-			sec:authorize="isAuthenticated()"
-			th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}" 
-			th:text="수정">
-			</a>
-			</div>
-			
-			
+			<div class="card-text" style="white-space: pre-line;"
+				th:text="${answer.content}"></div>
+			<div th:if="${question.author != null}"
+				th:text="${answer.author.username}"></div>
+
+			<div
+				th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+
+
 		</div>
 	</div>
 
@@ -69,6 +79,19 @@ sec:authorize="isAuthenticated()" - 현재 로그인 상태
 
 		<input type="submit" value="답변등록">
 	</form>
+
+
+	<script layout:fragment="script" type='text/javascript'>
+		const delete_elements = document.getElementsByClassName("delete");
+		Array.from(delete_elements).forEach(function(element) {
+			element.addEventListener('click', function() {
+				if (confirm("정말로 삭제하시겠습니까?")) {
+					location.href = this.dataset.uri;
+				}
+				;
+			});
+		});
+	</script>
 
 
 </div>
