--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -28,7 +28,9 @@
 		<a th:href="@{|/question/modify/${question.id}|}" class=""
 			sec:authorize="isAuthenticated()"
 			th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
-			th:text="수정"> </a> <a href="javascript:void(0);"
+			th:text="수정"> </a> 
+		
+		<a href="javascript:void(0);"
 			th:data-uri="@{|/question/delete/${question.id}|}" class="delete"
 			sec:authorize="isAuthenticated()"
 			th:if="${question.author != null and #authentication.getPrincipal().getUsername()== question.author.username}"
@@ -52,9 +54,21 @@
 			<div th:if="${question.author != null}"
 				th:text="${answer.author.username}"></div>
 
-			<div
-				th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+			<div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
 
+<div>
+		<a th:href="@{|/answer/modify/${answer.id}|}" class=""
+			sec:authorize="isAuthenticated()"
+			th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+			th:text="수정"> </a> 
+		
+		<a href="javascript:void(0);"
+			th:data-uri="@{|/answer/delete/${answer.id}|}" class="delete"
+			sec:authorize="isAuthenticated()"
+			th:if="${answer.author != null and #authentication.getPrincipal().getUsername()== answer.author.username}"
+			th:text="삭제"></a>
+
+	</div>
 
 		</div>
 	</div>
