--- a/src/main/resources/templates/answer_form.html
+++ b/src/main/resources/templates/answer_form.html
@@ -1,6 +1,15 @@
-<!DOCTYPE html>
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
-	<h5 class="my-3 border-bottom pb-2">답변 수정</h5>
+    <h5 class="">답변 수정</h5>
+    <form th:object="${answerForm}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+        <div th:replace="~{form_errors :: formErrorsFragment}"></div>
+        
+        <div class="">
+            <label for="content" class="">내용</label>
+            <textarea th:field="*{content}" class="" rows="10"></textarea>
+        </div>
+        <input type="submit" value="저장하기" class="">
+    </form>
 </div>
 </html>
