--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container">
+	
+	<!-- 검색 기능 -->
+	<div> 
+	<a th:href="@{/question/create}" class="btn">질문 등록하기</a>
+	 <input type="text" id="search_kw" class="" th:value="${kw}">
+	 <button type="button" class="" id="btn_search">찾기</button>
+	 </div>
+	
+		
 	<table>
 		<thead>
 			<tr>
@@ -41,7 +50,7 @@
 		<ul>
 		<!-- 이전페이지가 없을땐 버튼 비활성화   -->
 			<li class="" th:classappend="${!paging.hasPrevious} ? 'disabled' ">
-			 <a class="page-link" th:href="@{|?page=${paging.number-1}|}"> <span>이전</span></a>
+			 <a class="page-link" href="javascript:void(0)" th:data-page="${paging.number-1}"> <span>이전</span></a>
 			</li>
 			
 		<!-- 페이지 리스트를 루프 돌면서 해당 페이지로 이동할 수 있는 링크생성,  
@@ -53,17 +62,60 @@
 			th:if="${page >= paging.number-5 and page <= paging.number+5}"
 		    th:classappend="${page == paging.number} ? 'active'" class="page-item">
 		 
-		 <a th:text="${page}" class="page-link"  th:href="@{|?page=${page}|}"></a>
+		 <a th:text="${page}" class="page-link" href="javascript:void(0)" th:data-page="${page}"></a>
 		</li>
 			
-			<li class="" th:classappend="${!paging.hasNext} ? 'disabled' ">
-			<a th:href="@{|?page=${paging.number+1}|}"><span>다음</span></a>
+			<li class="" th:classappend="${!paging.hasNext} ? 'disabled ' ">
+			<a class="page-link" href="javascript:void(0)" th:data-page="${paging.number+1}"><span>다음</span></a>
 			</li>
 			
 		</ul>
 	</div>
+	<!-- 페이징 처리 끝  -->
 	
-	<a th:href="@{/question/create}" class="btn">질문 등록하기</a>
+	<form th:action="@{/question/list}" method="get" id="searchForm">
+	<input type="hidden" id="kw" name="kw" th:value="${kw}">
+	<input type="hidden" id="page" name="page" th:value="${paging.number}">
+	</form>
+	 
 </div>
 
+
+ <script layout:fragment="script" type='text/javascript'>
+ 
+ const page_elements = document.getElementsByClassName("page-link");
+ cosole.log("page_elements : ",page_elements );
+ Array.from(page_elements).forEach(function(element){
+	 element.addEventListener('click', function(){
+		document.getElementById('page').value= this.dataset.page;
+		document.getElementById('searchForm').submit();
+	 });
+ });
+ 
+ 
+ const btn_search = document.getElementById("btn_search");
+ alert("버튼클릭@@");
+ btn_search.addEventListener('click', function(){
+	document.getElementById('kw').value = document.getElementById('search_kw').value; 
+	document.getElementById('page').value = 0;
+	document.getElementById('searchForm').submit();
+ });
+ 
+</script> 
+
+<!-- <script layout:fragment="script" type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 0;  // 검색버튼을 클릭할 경우 0페이지부터 조회한다.
+    document.getElementById('searchForm').submit();
+}); -->
+</script>
 </html>
